Fix styles on IE

--- a/src/less/time-grid.less
+++ b/src/less/time-grid.less
@@ -73,8 +73,8 @@
 
 .rbc-time-content {
   display: flex;
-  flex: 1 1 0%;
-  align-items: stretch;
+  flex: 1 0 0%;
+  align-items: flex-start;
   width: 100%;
   border-top: 2px solid @calendar-border;
   overflow-y: auto;
